[package]
name = "rawrur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
raur = "7.0.0"
crossterm = "0.28.1"
tokio = { version = "1.36.0", features = [
    "process",
    "macros",
    "rt-multi-thread",
] }
reqwest = "0.12.7"
